<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContaActivity">

    <TextView
        android:id="@+id/textNomeHosp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/hospedeNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEmailHosp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/palavraEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNomeHosp" />

    <TextView
        android:id="@+id/textSenhaHosp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/palavraSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailHosp" />

    <EditText
        android:id="@+id/editHospNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/hintNome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textNomeHosp"
        app:layout_constraintStart_toEndOf="@+id/textNomeHosp"
        app:layout_constraintTop_toTopOf="@+id/textNomeHosp" />

    <EditText
        android:id="@+id/editHospEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textEmailHosp"
        app:layout_constraintStart_toEndOf="@+id/textEmailHosp"
        app:layout_constraintTop_toTopOf="@+id/textEmailHosp" />

    <EditText
        android:id="@+id/editHospSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/hintSenha"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textSenhaHosp"
        app:layout_constraintStart_toEndOf="@+id/textSenhaHosp"
        app:layout_constraintTop_toTopOf="@+id/textSenhaHosp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/contaSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHospSenha" />

</androidx.constraintlayout.widget.ConstraintLayout>